logo align 2 + universal fix

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     background-image: url(/Rimg/1.png);
     background-position: 35% 30%;
     background-repeat: no-repeat;
-    background-size: auto 160% ;
+    background-size: 160% ;
     height: 70px;
     width: 200px;
     text-decoration: none;
